--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,13 +8,24 @@ html {
     padding: 5px;
     box-sizing: border-box;
 }
+
+// copied from osmaviation.com
+body {
+    margin: 0;
+    padding: 0;
+    background: #fefefe;
+    font-family: Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #0a0a0a;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 a {
     outline: none;
 }
-#app {
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
+
 
 // copied from osmaviation.com
 li, p {
@@ -24,6 +35,7 @@ li, p {
     font-size: 1rem;
 }
 
+// copied from osmaviation.com
 h1, h2, h3, h4, h5, h6 {
     font-family: futura-pt,sans-serif;
     color: #576074;
@@ -35,5 +47,9 @@ a:focus, a:hover {
 }
 
 .navbar-item img {
-    max-height: 120px;
+    max-height: 100px;
+}
+
+.navbar {
+    padding: 5px;
 }
