VueJS component and controller query
WIP: Add new vuejs component EmployeesComponent to show a list of employees.

- add controller method and query to extract information from database

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,5 @@
-// Bulma
-@import "~bulma/bulma.sass";
+// BootstrapCSS
+@import "~bootstrap/scss/bootstrap";
 
 body,
 html {
@@ -52,4 +52,8 @@ a:focus, a:hover {
 
 .navbar {
     padding: 5px;
+}
+
+.danger {
+    color: red;
 }
