--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
+h1 {
+    text-transform: capitalize;
+}
+
 a:focus, a:hover {
     color: #1468a0;
 }
